# azero-sca-contracts

./: README.md
account-registry/: Cargo.toml
account-registry/src/: account.rs  contract.rs  error.rs  lib.rs  tests.rs  types.rs
account-registry/src/tests/: e2e_tests.rs  tests.rs
smart-account/: Cargo.toml  lib.rs
smart-account/src/: contract.rs  error.rs  lib.rs
tests/: package.json
