[package]
name = "azero-account-registry"
version    = "0.0.1"
edition    = "2021"
repository = "https://github.com/kromsten/azero-sca-contracts"
authors    = ["kromsten <kromsten@megarock.labs>"]

[dependencies]
ink                 = { version = "4.3.0", default-features = false}
scale               = { version = "3.6.9", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info          = { version = "2.10.0", default-features = false, features = ["derive"], optional = true }
openbrush           = { git = "https://github.com/Brushfam/openbrush-contracts", branch = "develop", default-features = false, features = [
    "proxy", 
    "upgradeable", 
    "crypto", 
    "ownable"
]}

smart-account-auth  = { git = "https://github.com/MegaRockLabs/smart-account-auth", features = ["substrate"]}

azero-smart-account = { path = "../smart-account", default-features = false, features = ["ink-as-dependency"]}



thiserror     = "1.0.50"


[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
  "openbrush/std",
  "smart-account-auth/std",
  "azero-smart-account/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
