[package]
name = "azero-smart-account"
version    = "0.0.1"
edition    = "2021"
repository = "https://github.com/kromsten/azero-sca-contracts"
authors    = ["kromsten <kromsten@megarock.labs>"]

[dependencies.ink]
version          = "4.3.0"
default-features = false

[dependencies.scale]
version          = "3.6.9"
package          = "parity-scale-codec"
default-features = false
features         = ["derive"]

[dependencies.scale-info]
version          = "2.10.0"
default-features = false


[dependencies.openbrush]
git              = "https://github.com/Brushfam/openbrush-contracts"
tag              = "4.0.0"
default-features = false
features         = ["ownable"]

[dependencies.saa]
git              = "https://github.com/MegaRockLabs/smart-account-auth"
package          = "smart-account-auth"
default-features = false
features         = ["substrate"]


[lib]
path = "src/lib.rs"


[features]
default = ["std"]
std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
  "openbrush/std",
  "saa/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
